# RESEARCH-IN

./: .gitignore  LICENSE  README.md  flowith.json  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  crawl.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  terraform.yml
apps/community/: package.json  tsconfig.json
apps/community/src/: index.ts
apps/web/: README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/components/: Example.tsx
apps/web/pages/: index.tsx
apps/web/public/: manifest.json
apps/web/src/: App.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/[...ipfs]/: route.tsx
apps/web/src/components/: AuthDialog.tsx  CommandPalette.tsx  Navbar.tsx
apps/web/src/components/ui/: button.tsx  (+1 more)
apps/web/src/context/: UserContext.tsx
apps/web/src/lib/: supabaseClient.ts
apps/web/src/types/: supabase.ts
infra/sql/: 000_init.sql  010_karma.sql
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/: main.tf  outputs.tf  variables.tf
infrastructure/modules/qdrant/: main.tf  outputs.tf  variables.tf
infrastructure/modules/supabase/: main.tf  outputs.tf  variables.tf
infrastructure/modules/typesense/: main.tf  outputs.tf  variables.tf
seed/: initial_cids.txt
services/ingest/: Cargo.toml
services/ingest/cli/: Cargo.toml
services/ingest/cli/src/: main.rs
services/ingest/core/: Cargo.toml
services/ingest/core/src/: lib.rs
services/ingest/src/: lib.rs  main.rs
services/ingest/tests/: ingest.rs
(+1 files in other folders)
